--- a/src/Clients/Clients.WebApi/Clients.WebApi.csproj
+++ b/src/Clients/Clients.WebApi/Clients.WebApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
