--- a/src/Clients/Clients.WebApi/Clients.WebApi.csproj
+++ b/src/Clients/Clients.WebApi/Clients.WebApi.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\Clients.Services\Clients.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="..\..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
+
 </Project>
