--- a/src/Rides/Rides.WebApi/Properties/launchSettings.json
+++ b/src/Rides/Rides.WebApi/Properties/launchSettings.json
@@ -1,15 +1,15 @@
-{
+﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:7000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:6000"
+      }
     }
-  } 
+  }
 }
