--- a/src/docker-compose.Development.yml
+++ b/src/docker-compose.Development.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - D:\repos\DbData\postgres:/var/lib/postgresql/data
+      - D:\repos\ContainersData\postgres:/var/lib/postgresql/data
 
   clients.webapi:
     container_name: clients-webapi
