Added rides read model.

--- a/src/Rides/Rides.WebApi/appsettings.Development.json
+++ b/src/Rides/Rides.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "Db": {
-    "ConnectionString": "mongodb://madmin:4321@127.0.0.1:27017"
+    "ConnectionString": "mongodb://127.0.0.1:27017/?replicaSet=crs"
   }
 }
