--- a/src/Rides/Rides.Services/Rides.Services.csproj
+++ b/src/Rides/Rides.Services/Rides.Services.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Rides.Domain\Rides.Domain.csproj" />
+      <ProjectReference Include="..\Rides.Persistence\Rides.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="11.1.0" />
+    </ItemGroup>
+
 </Project>
