--- a/src/Cars/Cars.Database/Cars.Database.csproj
+++ b/src/Cars/Cars.Database/Cars.Database.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
       <ProjectReference Include="..\Cars.Model\Cars.Model.csproj" />
     </ItemGroup>
 
