--- a/src/Clients/Clients.Database/Clients.Database.csproj
+++ b/src/Clients/Clients.Database/Clients.Database.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
       <ProjectReference Include="..\Clients.Model\Clients.Model.csproj" />
     </ItemGroup>
 
