--- a/src/Common/Common.Initialization/Common.Initialization.csproj
+++ b/src/Common/Common.Initialization/Common.Initialization.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
-      <ProjectReference Include="..\Clients.Database\Clients.Database.csproj" />
-      <ProjectReference Include="..\Clients.Model\Clients.Model.csproj" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
