--- a/src/Rides/Rides.Persistence/Rides.Persistence.csproj
+++ b/src/Rides/Rides.Persistence/Rides.Persistence.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
       <ProjectReference Include="..\Rides.Domain\Rides.Domain.csproj" />
     </ItemGroup>
 
