--- a/src/Rides/Rides.Services/Rides.Services.csproj
+++ b/src/Rides/Rides.Services/Rides.Services.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
       <ProjectReference Include="..\Rides.Domain\Rides.Domain.csproj" />
       <ProjectReference Include="..\Rides.Persistence\Rides.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     </ItemGroup>
 
 </Project>
