--- a/src/Cars/Cars.Messaging/Cars.Messaging.csproj
+++ b/src/Cars/Cars.Messaging/Cars.Messaging.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
       <ProjectReference Include="..\..\Core\Core.Messaging\Core.Messaging.csproj" />
-      <ProjectReference Include="..\Cars.Database\Cars.Database.csproj" />
-      <ProjectReference Include="..\Cars.Model\Cars.Model.csproj" />
     </ItemGroup>
 
 </Project>
