--- a/src/Cars/Cars.WebApi/appsettings.Development.json
+++ b/src/Cars/Cars.WebApi/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "Db": {
     "ConnectionString": "Host=localhost;Database=crs;Username=postgres;Password=1234"
+  },
+  "Kafka": {
+    "Address": "localhost:9093"
   }
 }
