--- a/src/Core/Core.Messaging.Events/Core.Messaging.Events.csproj
+++ b/src/Core/Core.Messaging.Events/Core.Messaging.Events.csproj
@@ -7,9 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Core\Core.Messaging\Core.Messaging.csproj" />
-      <ProjectReference Include="..\Cars.Database\Cars.Database.csproj" />
-      <ProjectReference Include="..\Cars.Model\Cars.Model.csproj" />
+      <PackageReference Include="MessagePack" Version="2.4.59" />
     </ItemGroup>
 
 </Project>
