--- a/src/Rides/Rides.WebApi/appsettings.Development.json
+++ b/src/Rides/Rides.WebApi/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "Db": {
     "ConnectionString": "mongodb://127.0.0.1:27017/?replicaSet=crs"
+  },
+  "Kafka": {
+    "Address": "localhost:9093"
   }
 }
