--- a/src/Rides/Rides.Domain/Rides.Domain.csproj
+++ b/src/Rides/Rides.Domain/Rides.Domain.csproj
@@ -10,4 +10,9 @@
       <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Core\Core.Messaging.Events\Core.Messaging.Events.csproj" />
+      <ProjectReference Include="..\..\Core\Core.Messaging\Core.Messaging.csproj" />
+    </ItemGroup>
+
 </Project>
