Implemented messaging between Clients MS and Rides MS. Improved Rides MS API. Fixes.

--- a/src/Clients/Clients.Services/Clients.Services.csproj
+++ b/src/Clients/Clients.Services/Clients.Services.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Common\Common.Initialization\Common.Initialization.csproj" />
+      <ProjectReference Include="..\..\Core\Core.Messaging\Core.Messaging.csproj" />
       <ProjectReference Include="..\Clients.Database\Clients.Database.csproj" />
       <ProjectReference Include="..\Clients.Model\Clients.Model.csproj" />
     </ItemGroup>
